namespace POC.Contracts.ScreenProfile;

public class CreateScreenProfileDto
{
    public string Name { get; set; }
    // Add other properties necessary for creating a ScreenProfile
    // For example, configuration settings, etc.
}
